fixed the swiper not showing 5th img

--- a/src/index.css
+++ b/src/index.css
@@ -50,10 +50,10 @@ body {
 }
 
 .swiper-slide img {
-  display: block;
+  /* display: block; */
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 /* CompanyCarousel section ⬆️ */
